# good-birds

./: .gitignore  README.md  download_exiftool.py  pyproject.toml  test_exe.py
good_birds/: burst.py  cli.py  models.py  rating.py  scanner.py  scorer.py
tests/: test_burst.py  test_rating.py  test_scorer.py
